cart button was overflowing due to size, fixed it by switching width to auto

--- a/react-app/src/components/LandingPage/index.css
+++ b/react-app/src/components/LandingPage/index.css
@@ -330,7 +330,7 @@
 #cart_link {
   background-image: url("../../public/static/images/background_cart.jpg");
   background-position: -34px 30px;
-  width: 120px;
+  width: auto;
   height: 20px;
   background-color: rgba( 164, 208, 7, 0.4 );
   box-shadow: 0 0 3px #000;
